# finex

./: .pre-commit-config.yaml  LICENSE  README.md  caclutator.py  calculator.py  cli.py  pyproject.toml  settings.py  vars.py
clients/: __init__.py  base.py  portfolio.py  request.py
clients/api/: __init__.py  base.py  currency.py  fonds.py  schemas.py
