[tool.poetry]
name = "finex"
version = "0.1.0"
description = "CLI which shows your FinEx assets"
authors = ["Dmitrii_Simonov <glooshak@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
pydantic = "^2.0.2"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic-settings = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.4.1"
ruff = "^0.0.278"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
